--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "nodemon ./api/index.ts",
+    "dev": "nodemon index.ts",
     "build": "tsc --project tsconfig.json"
   },
   "repository": {
@@ -24,8 +24,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.1"
+    "mongoose": "^5.12.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -33,7 +34,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "nodemon": "^3.0.1"
   },
   "jest": {
     "transform": {
