--- a/package.json
+++ b/package.json
@@ -26,16 +26,18 @@
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.12.7",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
+    "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2",
-    "nodemon": "^3.0.1"
+    "typescript": "^5.2.2"
   },
   "jest": {
     "transform": {
