--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.12.7",
-    "nodemailer": "^6.9.7"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
